--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,15 @@
 
     <groupId>com.huixiong</groupId>
     <artifactId>MavenDemo</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>ServletDemo</module>
+        <module>WebDemo</module>
+        <module>SpringDemo</module>
+        <module>SpringBootDemo</module>
+        <module>SpringCloudDemo</module>
+    </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -16,18 +23,5 @@
         <java.version>8</java.version>
         <tomcat.version>8.5.56</tomcat.version>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-core</artifactId>
-            <version>${tomcat.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-jasper</artifactId>
-            <version>${tomcat.version}</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
+
 </project>
