--- a/ServletDemo/pom.xml
+++ b/ServletDemo/pom.xml
@@ -7,9 +7,10 @@
         <groupId>com.huixiong</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>ServletDemo</artifactId>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -17,17 +18,35 @@
     </properties>
 
     <dependencies>
+
+        <!--    servlet api    -->
+<!--        <dependency>-->
+<!--            <groupId>javax.servlet</groupId>-->
+<!--            <artifactId>javax.servlet-api</artifactId>-->
+<!--            <version>4.0.0</version>-->
+<!--            &lt;!&ndash;    provided 表示只在编译时使用，不打包       &ndash;&gt;-->
+<!--            <scope>provided</scope>-->
+
+<!--        </dependency>-->
+        <!--    引入下面两个包就不需要 servlet-api    -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
             <version>${tomcat.version}</version>
-            <scope>provided</scope>
+<!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
             <version>${tomcat.version}</version>
-            <scope>provided</scope>
+<!--            <scope>provided</scope>-->
+        </dependency>
+
+        <!--  lombok 免去了 写getter setter方法   -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
         </dependency>
     </dependencies>
 </project>
