--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>SpringBootDemo</module>
         <module>SpringCloudDemo</module>
         <module>NetworkDemo</module>
+        <module>DesignPatternsDemo</module>
+        <module>UncollatedCode</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,4 +27,11 @@
         <tomcat.version>8.5.56</tomcat.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
+    </dependencies>
 </project>
