--- a/UncollatedCode/pom.xml
+++ b/UncollatedCode/pom.xml
@@ -22,5 +22,11 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.8.0-M1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
 </project>
