--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>DesignPatternsDemo</module>
         <module>UncollatedCode</module>
         <module>tkMybatisDemo</module>
+        <module>BeetlDemo</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
