--- a/ServletDemo/pom.xml
+++ b/ServletDemo/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <tomcat.version>8.5.56</tomcat.version>
     </properties>
 
     <dependencies>
